1.3.13
	+ Added support for dynamic zones to be updated using a shared
	  secret key available at `/etc/bind/keys`. This feature is
	  mainly used by dhcp module to implement dynamic DNS updates.
	+ Fixed structure of menu on language change
1.3.12
	+ Add breadcrumbs to UI
1.3.11
	+ Added report support
1.3.10
	+ Added support for NS records
	+ Check for FQDN in custom MX records
1.3.4
	+ Reversed record for domain IP address added
	+ Fixed bug when removing hostnames
1.3.1
	+ Comment out default configuration of source ports operations to stick
	  to the defaults provided by the  Ubuntu package.
1.1.10
	+ New release
1.1
	+ Use new row() and ids() API
0.12.101
	+ Check two hostnames or alias are equal using type method to do
	so
0.12.100
	+ Added optional IP address for domains
	+ Bugfix: Show correct message when editing a hostname
0.12.99
	+ New release
0.12.1
	+ Bugfix. Remove mail exchangers that reference a deleted host name.
0.12
	+ Use the new EBox::Model::Row api
	+ Load module capability in pre-start just like the bind9 init
	script does
	+ Don't add static entry `ns` to localhost if user has defined
	another IP address for the `ns` name0.11.102
	+ Check aliases are not nameserver records as well
0.11.101
	+ Added Mail Exchanger model to introduce MX records in domains.
	+ Added mail exchanger model related methods to the exposed API.
	+ Check consistencies among alias and hostnames within the same
	domain
	+ Updated remainder models to use lastest types HostIP and
	DomainName
	+ Added 'changeName', 'getHostNameByName', 'getHostNameByIP' and
	'findAlias' to improve DNS API to Perl scripts and SOAP clients
0.11.100
	+ add isRunning and enableService to set firewall properly
	+ onInstall() functionality moved to migration script
	+ Do not remove bind9 rc links
	+ Stop bind9 in pre-start in upstart script
0.11.99
	+ Added `getHostname` to the exposed API to interact with
	webserver module
	+ Now tables are shown sorted by 'name' attribute (domain,