@@ -1,3 +1,6 @@
+HEAD
+	+ Remove migration scripts 0001_import_to_data_table_model.pl
+	  0002_fix_active_to_enabled.pl
 1.3.13
 	+ Added support for dynamic zones to be updated using a shared
 	  secret key available at `/etc/bind/keys`. This feature is
